[gd_scene load_steps=19 format=2]

[ext_resource path="res://codes/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/357669628_1322477388478755_641798974614475788_n.png" type="Texture" id=2]
[ext_resource path="res://Fonts/LuckiestGuy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/BriskKids.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Buttons/red_button.tres" type="StyleBox" id=5]
[ext_resource path="res://Buttons/blue_button.tres" type="StyleBox" id=6]
[ext_resource path="res://Buttons/hover_green_button.tres" type="StyleBox" id=7]
[ext_resource path="res://Buttons/pressed_green_button.tres" type="StyleBox" id=8]
[ext_resource path="res://click.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 5
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.388235, 0.521569, 0.101961, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.223529, 0.294118, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0392157, 0.576471, 0.662745, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0392157, 0.576471, 0.662745, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.0470588, 0.403922, 0.458824, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.658824, 0.156863, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.658824, 0.156863, 0.156863, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.45098, 0.105882, 0.105882, 1 )

[node name="Main_Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="3551712251496747814569806565176679449438689N" type="Sprite" parent="."]
position = Vector2( 300, 512 )
scale = Vector2( 0.414365, 0.5 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 32.0
margin_top = 40.0
margin_right = 544.0
margin_bottom = 992.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 512.0
margin_bottom = 952.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0.768627, 0.427451, 0.0823529, 1 )
custom_colors/font_outline_modulate = Color( 0.913725, 0.905882, 0.905882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "
HANGJUan"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 512.0
margin_bottom = 188.0
custom_colors/font_color = Color( 0.768627, 0.427451, 0.0823529, 1 )
custom_colors/font_outline_modulate = Color( 0.913725, 0.905882, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "The Filipino Hangman Game"
align = 1
uppercase = true

[node name="Start_Button" type="Button" parent="."]
process_priority = 1
margin_left = 168.0
margin_top = 552.0
margin_right = 464.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = SubResource( 5 )
text = "START"

[node name="Leaderboard_Button" type="Button" parent="."]
margin_left = 168.0
margin_top = 648.0
margin_right = 464.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
text = "leaderboards"

[node name="Quit_Button" type="Button" parent="."]
margin_left = 168.0
margin_top = 744.0
margin_right = 464.0
margin_bottom = 816.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "QUIT"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 3.0

[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Leaderboard_Button" to="." method="_on_Leaderboard_Button_pressed"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_Quit_Button_pressed"]
